--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 body {
   font-family: NanumSquareRound;
+  background-color: #EFEFEF;
+}
+
+.App {
+  justify-content: center !important;
+  margin-right: 400px;
+  margin-left: 400px;
+  margin-top: 200px;
 }
