chore: css 파일이 연관된 파일에만 적용되도록 수정

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,8 +1,8 @@
-.checkbox {
+.List .checkbox {
   margin-left: 1rem !important;
 }
 
-.close {
+.List .close {
   margin-top: 20px;
   margin-right: 1rem;
 }
