--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,13 @@ body {
 }
 
 .App {
-  justify-content: center !important;
-  margin-right: 400px;
-  margin-left: 400px;
-  margin-top: 200px;
+  justify-content: center;
+  margin-right: 20%;
+  margin-left: 20%;
+  margin-top: 100px;
+}
+
+.App h1 {
+  text-align: center;
+  font-weight: bold;
 }
